# py_ai_bedrock_chat

./: README.md  config.json  main.py  pyproject.toml
handlers/: about.py  chat.py
models/: file_data.py
util/: env_config.py  helper.py
