[project]
name = "ai-chat"
version = "0.1.3"
description = "python cli claude 4 ai assist with mcp features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.13",
    "jsonpickle>=4.0.5",
    "mcp>=1.8.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "simple-term-menu>=1.6.6",
    "typer>=0.15.3",
]
